terraform/main.tf
provider "aws" {
    region = "ap-south-1"
  
}

# Creating VPC, name, CIDR and Tags
resource "aws_vpc" "dev" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_support = "true"
  enable_dns_hostnames = "true"
  #enable_classiclink = "false"
  tags = {
    Name = "dev"
  }
}

# Creating public Subnets in VPC
resource "aws_subnet" "dev-public-1" {
  vpc_id     = aws_vpc.dev.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch ="true"
  availability_zone = "ap-south-1a"

  tags = {
    Name = "dev-public-1"
  }
}

resource "aws_subnet" "dev-public-2" {
  vpc_id     = aws_vpc.dev.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch ="true"
  availability_zone = "ap-south-1b"

  tags = {
    Name = "dev-public-2"
  }
}

# Creating Internet gateway in AWS VPC
resource "aws_internet_gateway" "dev-gw" {
  vpc_id = aws_vpc.dev.id

  tags = {
    Name = "dev"
  }
}

# Creating RT for Internet gateway 
resource "aws_route_table" "dev-public" {
  vpc_id = aws_vpc.dev.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.dev-gw.id
  }

  tags = {
    Name = "dev-public-1"
  }
}

# Creating RT Association for public subnets
resource "aws_route_table_association" "dev-public-1-a" {
    subnet_id = aws_subnet.dev-public-1.id
    route_table_id = aws_route_table.dev-public.id
  
  }
  resource "aws_route_table_association" "dev-public-2-a" {
    subnet_id = aws_subnet.dev-public-2.id
    route_table_id = aws_route_table.dev-public.id
  }

  # Creating EC2 instance for public subnets
resource "aws_instance" "public_inst_1" {
  ami           = "ami-0607784b46cbe5816"
  instance_type = "t2.micro"
  key_name = "LInuxKp"

  tags = {
    Name = "public_inst_1"
  }
  
  }
  resource "aws_instance" "public_inst_2" {
  ami           = "ami-0607784b46cbe5816"
  instance_type = "t2.micro"
  key_name = "LInuxKp"

  tags = {
    Name = "public_inst_2"
  }
  }
